--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,14 @@
         <input type="file" id="btn-upload" name="file">
         <input type="submit" value="Upload">
     </form>
-    {% if image_data %}
+    {% if upload_file %}
     <div class="upload-result"> 
         <h3> Image Upload Result </h3> 
         <img src="data:image/jpeg;base64,{{ image_data }}" alt="Image">
     </div>
     {% endif %}
 
-    {% if encryptedImage %}
+    {% if encrypt_image %}
     <div class="encryption-result"> 
         <h3> Image Encryption Result </h3> 
         <img src="data:image/jpeg;base64,{{ encryptedImage }}" alt="Image">
