--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,15 +11,14 @@ body {
     align-items: center;
     /* Center content vertically */
     height: 100vh;
-    /* Set the height of the body to the full viewport height */
 }
 
 .container {
     width: 80%;
     background-image: url('/static/img/bgg.jpg');
-    /*background-color: rgba(234, 245, 209, 0.861); /* White background for container with some transparency */
+    background-size: cover;
+    background-position: center;
     padding: 10px;
-    /* Add some padding */
     border-radius: 30px;
     /* Rounded corners */
     box-shadow: 0 0 10px rgba(158, 135, 219, 0.1);
